Add parameter for closed caption translation target languages